we grouped to int together into a new Value Object (Interval): immutable, small, lacking PK (identity). -> simpler signatures. Fixed: "Missing Abstraction" code smell